# IDP

./: README.md  python_code.py
cuda/: .gitignore  CMakeLists.txt  Makefile  a.out
cuda/bench/: benchmark.py  consts.py  cudadump.txt  ex  generate_test.py  input_fourier_coeffs_cos.txt  input_fourier_coeffs_sin.txt  input_freqs.txt  input_x.txt  pydump.txt  pyproject.toml  testfourier.py  testfourierprof.py  testkanprof.py  valgrind-out.txt
cuda/inc/: kan.h
cuda/src/: fourier.cu  fourier_cuda.cpp  kan.cu  kanOther.cu  kan_cuda.cpp  otherKan.cu  setup.py  test.py
cuda/src/fourier_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cuda/src/kan_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cuda/test/: dump.txt  testKanDims.py  testkan.py
pinn_flow_app/: app.py  requirements.txt  test_app.py
pinn_flow_app/static/: index.html
